# sbv2-api

.github/workflows/: CI.Dockerfile  CI.yml
crates/sbv2_bindings/: Cargo.toml  pyproject-template.toml  sbv2_bindings.pyi
crates/sbv2_bindings/pkg/: README.md  pyproject.toml
crates/sbv2_bindings/pkg/sbv2_bindings/: __init__.py
crates/sbv2_bindings/src/: lib.rs  sbv2.rs
crates/sbv2_core/: Cargo.toml  build.rs
crates/sbv2_core/src/: sbv2file.rs  style.rs  tts.rs
crates/sbv2_wasm/: Cargo.toml
crates/sbv2_wasm/src/: lib.rs
