[project]
name = "sbv2_bindings"
version = "0.2.0-alpha6"
description = "Style-Bert-VITSの推論ライブラリ"
requires-python = ">=3.8"
license.file = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Natural Language :: Japanese"
]

[project.urls]
Homepage = "https://github.com/tuna2134/sbv2-api"